[package]
name = "screeps-rs"
version = "0.0.1"
authors = ["Sam Martin"]
edition = "2018"

[dependencies]
fern = "0.5"
log = "0.4"
screeps-game-api = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_repr = "0.1"
stdweb = "0.4"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
