[package]
name = "screeps_rs"
version = "0.0.1"
authors = ["Jim Hessin <jhessin@gmail.com"]
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.5"
screeps-game-api = { path = "../screeps-game-api", features = ["check-all-casts"] }
serde = "1.0.105"
ron = "0.5.1"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
